@@ -25,7 +25,8 @@ from .helpers import url_for, jsonify, json_available, flash, \
     get_template_attribute, make_response, safe_join
 from .globals import current_app, g, request, session, _request_ctx_stack, \
      _app_ctx_stack
-from .ctx import has_request_context, has_app_context
+from .ctx import has_request_context, has_app_context, \
+     after_this_request
 from .module import Module
 from .blueprints import Blueprint
 from .templating import render_template, render_template_string
